# lab

./: CMakeLists.txt  README.md  main.c
libs/data_structures/ string/: string_.c  string_.h
libs/data_structures/ string/tasks/: task.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h
